changing text align in css

--- a/style.css
+++ b/style.css
@@ -14,3 +14,15 @@ img {
     height: auto;
     width: 100%;
 }
+
+h2 {
+    text-align: center;
+}
+
+h3 {
+    text-align: center;
+}
+
+h4 {
+    text-align: center;
+}
