--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ form {
 
 h1 {
     text-align: center;
+    font-family: sans-serif
 }
 
 img {
@@ -15,22 +16,23 @@ img {
     width: 100%;
 }
 
-h1 {
-    font-family: sans-serif
-}
 
 h2 {
     text-align: center;
+    font-family: sans-serif;
 }
 
 h3 {
     text-align: center;
+    font-family: sans-serif;
 }
 
 h4 {
     text-align: center;
+    font-family: sans-serif;
 }
 
 h5 {
     text-align: center;
+    font-family: sans-serif;
 }
